add resume content

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
   <H3>Contact </H3>
   <ul>
-    <li>Email:Ealabdalh@gmail.com</li>
+    <li>Email:Ealabadalh@gmail.com</li>
     <li>Mobile:07732191839</li>
     <li>Linkdin:www.linkedin.com/in/eid-abdallah-121302260</li>
   </ul>
